# biniman-sanitation-services

./: .gitignore  CLAUDE.md  README.md  biniman_test_cases.csv  cascade-fix-explanation.html  cascade-retry-bugs.html  docker-compose.yml  start.sh
backend/: .env.example  README.md  manage.py  pyproject.toml  requirements.txt
backend/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_seed_regions.py  0003_phoneotp_channel_phoneotp_email.py  0004_email_verification.py  0005_seed_kumasi_submetros.py  0006_rename_accounts_em_user_id_created_idx_accounts_em_user_id_214752_idx_and_more.py
backend/accounts/services/: email_otp.py  otp.py
backend/analytics/: tests.py  urls.py  views.py
backend/drivers/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/drivers/migrations/: 0001_initial.py  0002_driver_online_since.py  0003_driver_status_online_idx.py
backend/fleets/: admin.py  models.py  serializers.py  urls.py  views.py
backend/liquidgo/: asgi.py  celery.py  exception_handler.py  throttles.py  urls.py  ws_auth.py  wsgi.py
backend/payments/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/pricing/: admin.py  distance.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/ratings/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/requests_app/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  views.py
(+102 files in other folders)
