[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery==5.4.0",
    "channels==4.2.0",
    "channels-redis==4.2.1",
    "cloudinary==1.42.0",
    "daphne==4.1.2",
    "django==5.1.4",
    "django-cors-headers==4.6.0",
    "django-environ==0.11.2",
    "django-filter==24.3",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "ipython==8.30.0",
    "pillow==11.0.0",
    "psycopg[binary]==3.2.3",
    "python-dateutil==2.9.0",
    "redis==5.2.1",
    "requests==2.32.3",
]
